# pynewsreader

./: .gitignore  .pre-commit-config.yaml  00_core.ipynb  01_cli.ipynb  README.md  core.html  index.html  index.ipynb  nbdev.yml  pyproject.toml  quickstart.ipynb  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
_proc/: index.ipynb
app/: app.py
app/static/: index.js
app/templates/: index.html
pynewsreader/: _modidx.py  app.py  app_components.py  app_utils.py  cli.py  core.py  wip-app.py
pynewsreader/static/: index.js  styles.css
pynewsreader/templates/: articles.html  feed_dialog.html  index.html  menu.html  menubar.html  snackbar.html
